--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines-->
-    <meta name="description" content="Love Running. Club for runners in Dublinm Ireland. Urband runningm trail running. Dublin docklands and Phoenix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublinm Ireland. Urband runningm trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -16,7 +17,14 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>Header</header>
 
+    <!-- Main Content -->
+    <main>Main Content</main>
+    
+    <!-- Footer -->
+    <footer>Footer</footer>
 </body>
 
 </html>
