--- a/gallery.html
+++ b/gallery.html
@@ -30,8 +30,8 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
@@ -62,5 +62,3 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/7e995090f4.js" crossorigin="anonymous"></script>
 </body>
-
-</html>
