--- a/signup.html
+++ b/signup.html
@@ -30,9 +30,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -62,5 +62,3 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/7e995090f4.js" crossorigin="anonymous"></script>
 </body>
-
-</html>
